# seriesManagementSystem

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  about.html  changes.html  credits.html  downloads.html  genindex.html  index.html  install.html  license.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  test.py  tox.ini  usage.html
.github/workflows/: master-workflow.yaml  pr-build-workflow-linux.yaml  pr-build-workflow-mac.yaml  pr-build-workflow-windows.yaml  release-workflow.yaml
SMS/: __init__.py  serieManagementSystem.py
SMS/data/: captionnames.tex  lecture.cfg  sms.sty
SMS/utils/: LaTeX.py  Utils.py  ZipUtils.py
_sources/: about.rst.txt  downloads.rst.txt  install.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: Makefile  about.rst  conf.py  credits.rst  downloads.rst  install.rst  usage.rst
etc/: lecture.cfg  logging.conf  serieManagementSystem-completion.bash
scripts/: test.py
seriesmgmtsystem/: __init__.py
seriesmgmtsystem/data/: bibdb.bib
seriesmgmtsystem/sms/tests/: calendarEvent_test.py
seriesmgmtsystem/sms/tests/resources/: basic.ics
seriesmgmtsystem/utils/: __init__.py
src/seriesmgmtsystem/: __init__.py
src/seriesmgmtsystem/data/: bibdb.bib  lecture.cfg  sms.sty
src/seriesmgmtsystem/etc/: lecture.cfg  serieManagementSystem-completion.bash
src/seriesmgmtsystem/main/: __init__.py  main.py  mainImpl.py
src/seriesmgmtsystem/sms/: serieManagementSystem.py
src/seriesmgmtsystem/sms/tests/: calendarEvent_test.py
src/seriesmgmtsystem/sms/tests/resources/: basic.ics
src/seriesmgmtsystem/utils/: LaTeX.py  Utils.py  ZipUtils.py  __init__.py
tests/: calendarEvent_test.py
