[project]
name = "seriesManagementSystem"
authors = [
    {name = "Andreas Ruppen", email = "andreas.ruppen@gmail.com"},
]
description = "Manages and Creates Execises"
readme = "README.rst"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
#version = "1.3.1.dev0"
dynamic = ["dependencies", "version"]

[metadata]
url = "https://github.com/digsim/seriesManagementSystem"

[project.urls]
"Changelog" = "https://github.com/digsim/seriesManagementSystem/blob/main/CHANGES.rst"
"Source" = "https://github.com/digsim/seriesManagementSystem"
"Tracker" = "https://github.com/digsim/seriesManagementSystem/issues"
[project.scripts]
seriesManagementSystem = "seriesmgmtsystem.main.__main__:cli"

[project.optional-dependencies]
docs = [
  "Sphinx>=8.1.3",
  "sphinx_rtd_theme",
]
test = [
  "build",
  "check-manifest >= 0.50",
  "flake8",
  "pytest",
  "build",
  "twine",
  "coverage",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-data = {'seriesManagementSystem.etc'= ['logging.yaml', 'seriesmgmtsystem.conf', 'serieManagementSystem-completion.bash']}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
